--- a/ucEmu/cpuEmulator.html
+++ b/ucEmu/cpuEmulator.html
@@ -97,27 +97,43 @@
 
         this.OPCODES = {
             ADD: {
+                code: 0,
+                name: 'add',
                 byteWidth: 2
             },
             NAND: {
+                code: 1,
+                name: 'nand',
                 byteWidth: 2
             },
             SH: {
+                code: 2,
+                name: 'sh',
                 byteWidth: 2
             },
             JNZ: {
+                code: 3,
+                name: 'jnz',
                 byteWidth: 2
             },
             COPY: {
+                code: 4,
+                name: 'copy',
                 byteWidth: 2
             },
             IMM: {
+                code: 5,
+                name: 'imm',
                 byteWidth: 4
             },
             LD: {
+                code: 6,
+                name: 'ld',
                 byteWidth: 2
             },
             ST: {
+                code: 7,
+                name: 'st',
                 byteWidth: 2
             }
 
@@ -191,21 +207,13 @@
 
 
         this.boot = function () {
-            setOutputsAfterBoot();
+            _this.update();
         };
-
-        function setOutputsAfterBoot()
-        {
-            // TODO read regSeq and check if address bus is pulled down or driven by some other part of the cpu
-
-            // for now we assume that default output is provided after cpu starts
-        }
 
         this.update = function () {
 
             if (clockPrevious === null) {
                 clockPrevious = this.inputs.clock;
-                return;
             }
 
             if (clockPrevious !== this.inputs.clock) {
@@ -214,7 +222,10 @@
                 } else {
                     clockHighToLow();
                 }
-            }    
+                clockPrevious = this.inputs.clock;
+            }
+
+            updateOutputs();
         };
 
         function clockLowToHigh() 
@@ -228,7 +239,6 @@
 
             if (_this.registers.regReset) {
                 performRegistersReset();
-                setOutputsAfterReset();
                 resetOccured = true;
             }
 
@@ -248,7 +258,7 @@
                     sequenceAdd();
                     break;
                 case _this.REG_SEQ.NAND: 
-                    sequenceAdd();
+                    sequenceNand();
                     break;
                 case _this.REG_SEQ.SH: 
                     sequenceSh();
@@ -273,22 +283,55 @@
             _this.registers.regMemory = 0x00000000;
             _this.registers.regTimer = 0x00000000;
 
+            console.log('RESET!!');
+
             // !!! regReset register is excluded from reset !!!
         }
 
-        function setOutputsAfterReset()
+        function updateOutputs()
         {
-            _this.outputs.memoryAddress = 0x0000;        // after reset regSeq points to fetchFirst instruction - address comes from regPC that was reset too
-            _this.outputs.memoryWrite = 0x00000000;      // this outpus comes from memoryWriteBus that is, by fetchFirst instruction, pulled down by rezistors
-            _this.outputs.memoryWE = false;              // this comes from microProgram and for fetchFirst it's false
+            // memoryAddress
+            switch (_this.registers.regSeq) {
+                case _this.REG_SEQ.FETCH_FIRST:
+                case _this.REG_SEQ.ADD:
+                case _this.REG_SEQ.NAND:
+                case _this.REG_SEQ.SH:
+                // TOOD more
+                    _this.outputs.memoryAddress = _this.registers.regPC;
+                    break;
+                case _this.REG_SEQ.FETCH_SECOND:
+                    _this.outputs.memoryAddress = _this.registers.regPC + 4;
+                    break;
+                // TODO more 
+                default:
+                    _this.outputs.memoryAddress = 0x0000;            // floating bus - pulled down by resistors
+            }
+
+            // memoryWrite
+            switch (_this.registers.regSeq) {
+                default: 
+                    _this.outputs.memoryWrite = 0x00000000;  // TODO implement st operation
+            }
+            
+            // memoryWE
+            switch (_this.registers.regSeq) {
+                default: 
+                    _this.outputs.memoryWE = false;          // TODO implement st operation
+            }
+            
         }
 
         function sequenceFetchFirst()
         {
-            console.log('sequenceFetchFirst()');
-            var addressRow = _this.registers.regPC >>> 2,
-                addressCol = _this.registers.regPC & 0x3,
-                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 3);
+            console.log('    :: sequenceFetchFirst');
+            var addressRow = _this.outputs.memoryAddress >>> 2,
+                addressCol = _this.outputs.memoryAddress & 3,
+                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 8);
+
+            console.log('    addressRow = ' + dumpHex(addressRow));
+            console.log('    addressCol = ' + dumpHex(addressCol));
+            console.log('    inputs.memoryRead = ' + dumpHex(_this.inputs.memoryRead));
+            console.log('    memoryReadShifted = ' + dumpHex(memoryReadShifted));
 
             _this.registers.regMemory = memoryReadShifted;
             _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
@@ -296,24 +339,36 @@
 
         function sequenceFetchSecond()
         {
-            console.log('sequenceFetchSecond()');
-            var addressNext = _this.registers.regPC + 4,
-                addressNextRow = addressNext >>> 2,
-                addressNextCol = addressNext & 0x3,
-                memoryReadShifted = _this.inputs.memoryRead >> ((4 - addressNextCol) * 3),
+            console.log('    :: sequenceFetchSecond');
+            var addressRow = _this.outputs.memoryAddress >>> 2,
+                addressCol = _this.outputs.memoryAddress & 3,
+                memoryReadShifted = _this.inputs.memoryRead >>> ((4 - addressCol) * 8),
                 memoryFinal = memoryReadShifted | _this.registers.regMemory,
                 opCode = (memoryFinal & 0xF0000000) >>> (7 * 4),
-                opCodeDetails = getOpCodeDetails(opCode);
-
-            console.log( 'MemoryShift | regMem', memoryReadShifted.toString(16),  _this.registers.regMemory.toString(16));
-
-            _this.registers.regInstr = memoryFinal;
-            console.log(memoryFinal, opCode);
-            _this.registers.regPC += opCodeDetails ? opCodeDetails.byteWidth : 0;
+                opCodeDetails = getOpCodeDetails(opCode),
+                opCodeByteWidth = opCodeDetails ? opCodeDetails.byteWidth : 0,
+                regPCNext = _this.registers.regPC + opCodeByteWidth,
+                regSeqNext = 0;
 
             switch (opCode) {
-                case 0: _this.registers.regSeq = _this.REG_SEQ.ADD; break;
+                case _this.OPCODES.ADD.code: regSeqNext = _this.REG_SEQ.ADD; break;
+                case _this.OPCODES.NAND.code: regSeqNext = _this.REG_SEQ.NAND; break;
             }
+
+            console.log('    addressRow = ' + dumpHex(addressRow));
+            console.log('    addressCol = ' + dumpHex(addressCol));
+            console.log('    inputs.memoryRead = ' + dumpHex(_this.inputs.memoryRead));
+            console.log('    memoryReadShifted = ' + dumpHex(memoryReadShifted));
+            console.log('    memoryFinal = ' + dumpHex(memoryFinal));
+            console.log('    opCode = ' + opCode);
+            console.log('    opCodeDetails = ', opCodeDetails);
+            console.log('    opCodeByteWidth = ' + opCodeByteWidth);
+            console.log('    regPCNext = ' + regPCNext);
+            console.log('    regSeqNext = ' + regSeqNext);
+
+            _this.registers.regInstr = memoryFinal;
+            _this.registers.regPC = regPCNext;
+            _this.registers.regSeq = regSeqNext;
 
             /*
             0x00 0x00 0xaa 0xbb
@@ -330,38 +385,61 @@
 
         function sequenceAdd()
         {
-            console.log('sequenceAdd()');
-            var regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
+            console.log('    :: sequenceAdd');
+            var addressRow = _this.outputs.memoryAddress >>> 2,
+                addressCol = _this.outputs.memoryAddress & 3,
+                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 8),
+                regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
                 regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
                 regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
-                addressRow = _this.registers.regPC >>> 2,
-                addressCol = _this.registers.regPC & 0x3,
-                memoryReadShifted = _this.inputs.memoryRead << addressCol;
+                regIn0Value = readRegister(regIn0),
+                regIn1Value = readRegister(regIn1),
+                regResult = (regIn1Value + regIn0Value) & 0xFFFF;
 
-            console.log('   == ADD ', regOut, regIn0, regIn1, _this.registers.regInstr.toString(16));
+            console.log('    addressRow = ' + dumpHex(addressRow));
+            console.log('    addressCol = ' + dumpHex(addressCol));
+            console.log('    inputs.memoryRead = ' + dumpHex(_this.inputs.memoryRead));
+            console.log('    memoryReadShifted = ' + dumpHex(memoryReadShifted));
+            console.log('    regOut, regIn0, regIn1 <-> ' + regOut + ', ' + regIn0 + ', ' + regIn1);
+            console.log('    regIn0Value = ' + dumpHex(regIn0Value));
+            console.log('    regIn1Value = ' + dumpHex(regIn1Value));
+            console.log('    result = ' + dumpHex(regResult) + ' (sum)');
 
             _this.registers.regMemory = memoryReadShifted;
             _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
-            saveRegister(regOut, readRegister(regIn0) + readRegister(regIn1));
+            saveRegister(regOut, regResult);
+        }
+
+        function sequenceNand()
+        {
+            console.log('    :: sequenceNand');
+            var addressRow = _this.outputs.memoryAddress >>> 2,
+                addressCol = _this.outputs.memoryAddress & 3,
+                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 8),
+                regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
+                regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
+                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
+                regIn0Value = readRegister(regIn0),
+                regIn1Value = readRegister(regIn1),
+                regResult = ~(regIn1Value & regIn0Value);
+
+            console.log('    addressRow = ' + dumpHex(addressRow));
+            console.log('    addressCol = ' + dumpHex(addressCol));
+            console.log('    inputs.memoryRead = ' + dumpHex(_this.inputs.memoryRead));
+            console.log('    memoryReadShifted = ' + dumpHex(memoryReadShifted));
+            console.log('    regOut, regIn0, regIn1 <-> ' + regOut + ', ' + regIn0 + ', ' + regIn1);
+            console.log('    regIn0Value = ' + dumpHex(regIn0Value));
+            console.log('    regIn1Value = ' + dumpHex(regIn1Value));
+            console.log('    result = ' + dumpHex(regResult) + ' (NAND)');
+
+            _this.registers.regMemory = memoryReadShifted;
             _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+            saveRegister(regOut, regResult);
         }
 
         function sequenceSh()
         {
-            console.log('sequenceSh()');
-            var regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
-                regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
-                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
-                addressRow = _this.registers.regPC >>> 2,
-                addressCol = _this.registers.regPC & 0x3,
-                memoryReadShifted = _this.inputs.memoryRead << addressCol;
-
-            console.log('   == SH ', regOut, regIn0, regIn1, _this.registers.regInstr.toString(16));
-
-            _this.registers.regMemory = memoryReadShifted;
-            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
-            saveRegister(regOut, ~(readRegister(regIn0) & readRegister(regIn1)));
-            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+            console.log('    :: sequenceSh');
         }
 
         function getOpCodeDetails(opcode) 
@@ -409,30 +487,43 @@
         this.boot();
     };
 
-    var StaticRam = function (address, writeEnable, dataIn) {
+    var StaticRam = function (row, writeEnable, dataIn) {
         var _this = this,
             data = [],
             inputs = {
-                address: address,
+                row: row,
                 writeEnable: writeEnable,
                 dataIn: dataIn
             };
 
-        this.getRawData = function () {
-            return data;
-        }
+        this.log = function (startRow, stopRow) {
+            startRow = startRow < 0 ? -startRow : startRow;
+            for (var i = startRow; i < (64*1024) / 4; i++) {
+                if (i > stopRow) {
+                    return;
+                }
+                console.log(
+                    ' StaticRam:  ' + 
+                    i.toString(16) + ' | ' + 
+                    ((data[i] & 0xFF000000) >>> (6 * 4)).toString(16) + ' ' +
+                    ((data[i] & 0x00FF0000) >>> (4 * 4)).toString(16) + ' ' +
+                    ((data[i] & 0x0000FF00) >>> (2 * 4)).toString(16) + ' ' +
+                    (data[i] & 0x000000FF).toString(16)
+                );
+            }
+        };
 
         this.getDataOut = function () {
-            return data[inputs.address];
-        }
+            return data[inputs.row];
+        };
 
         this.setWriteEnable = function (writeEnable) {
             inputs.writeEnable = writeEnable ? true : false;
             update();
         };
 
-        this.setAddress = function (address) {
-            inputs.address = address & 0x3FFF;
+        this.setRow = function (row) {
+            inputs.row = row & 0x3FFF;
             update();
         };
 
@@ -443,9 +534,7 @@
 
         function update() {
             if (inputs.writeEnable) {
-                data[inputs.address] = inputs.dataIn;
-
-                console.log('   - data stored at adress ' + inputs.address + ': ' + inputs.dataIn);
+                data[inputs.row] = inputs.dataIn;
             }
         }
 
@@ -460,57 +549,82 @@
     };
 
     var memoryState = [
-        { address: 0x0000, data: [ 0x01, 0x23, 0x13, 0x22 ] },
-        { address: 0x0004, data: [ 0x02, 0x32, 0x11, 0x22 ] },
-        { address: 0x0008, data: [ 0x00, 0xFF, 0x00, 0xFF ] },
-        { address: 0x000B, data: [ 0xFF, 0x00, 0xFF, 0x00 ] }
+        { row: 0x0000, data: [ 0xAB, 0xCD, 0xEF, 0x12 ] },
+        { row: 0x0001, data: [ 0x31, 0x56, 0x11, 0x22 ] },
+        { row: 0x0002, data: [ 0xAA, 0xFF, 0x00, 0xFF ] },
+        { row: 0x0003, data: [ 0xEE, 0x00, 0xFF, 0x00 ] }
     ];
     var cpu = new Cpu();
+    cpuLog();
     var staticRam = new StaticRam(
-        cpu.outputs.memoryAddress, cpu.outputs.memoryWE, cpu.outputs.memoryWrite
+        cpu.outputs.memoryAddress >>> 2, 
+        cpu.outputs.memoryWE, 
+        cpu.outputs.memoryWrite
     );
+    cpuLog();
     syncCpuWithStaticRam();
+    cpuLog();
+    console.log("\n");
 
-    console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+
+    // console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
     triggerCpuResetAndProgramStaticRam();    
-    console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+    // console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+
+
+
+
+    cpu.registers.regPC = 3;
+    globalUpdate();
+    runCpu();
+
+
+
+
+
 
     function triggerCpuResetAndProgramStaticRam()
     {
         console.log(':: trigger RESET AND PROGRAM STARTS');
-        cpu.inputs.reset = true;
 
+        cpu.inputs.reset = true;
         clockHigh();
         clockLow();
 
-        programStaticRam();
+        programStaticRam(memoryState);
         syncCpuWithStaticRam();
 
         cpu.inputs.reset = false;
+        clockHigh();
+        clockLow();
+
+        syncCpuWithStaticRam();
+
         console.log(':: trigger RESET AND PROGRAM ENDS');
+        console.log("\n\n");
     }
 
     function runCpu()
     {
         var clockTicks = 0;        
 
-        while (clockTicks < 9) {
+        while (clockTicks < 3) {
             clockHigh();
             clockLow();
 
-            console.log('----> clockTicks ', clockTicks, 'regPC', cpu.registers.regPC);
-            console.log('   ');
+            console.log('----> clockTicks ', clockTicks);
+            console.log("\n");
             clockTicks++;
         }
     }
 
-    function programStaticRam()
+    function programStaticRam(memoryState)
     {
         staticRam.setWriteEnable(false);
         for (var i = 0; i < memoryState.length; i++) {
             var ms = memoryState[i];
 
-            staticRam.setAddress(ms.address);
+            staticRam.setRow(ms.row);
             staticRam.setDataIn(
                 0x1000000 * ms.data[0] + 
                 0x10000 * ms.data[1] + 
@@ -524,7 +638,7 @@
 
     function syncCpuWithStaticRam() 
     {
-        staticRam.setAddress(cpu.outputs.memoryAddress);
+        staticRam.setRow(cpu.outputs.memoryAddress >>> 2);
         staticRam.setWriteEnable(cpu.outputs.memoryWE);
         staticRam.setDataIn(cpu.outputs.memoryWrite);
 
@@ -534,22 +648,49 @@
     function clockHigh()
     {
         cpu.inputs.clock = true;
-        cpu.update();
-        syncCpuWithStaticRam();
-        console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+        globalUpdate();
+        cpuLog();
     }
 
     function clockLow()
     {
         cpu.inputs.clock = false;
-        cpu.update();
-        syncCpuWithStaticRam();
-        console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+        globalUpdate();
+        cpuLog();
     }
 
-    runCpu();
+    function globalUpdate()
+    {
+        cpu.update();
+        syncCpuWithStaticRam();
+    }
 
-    console.log(staticRam.getRawData());
+    function cpuLog()
+    {
+        console.log(
+            'in.clock: ' + cpu.inputs.clock + ' | ' + 
+            'in.memoryRead = ' + dumpHex(cpu.inputs.memoryRead) + ' | ' +
+            'in.reset = ' + (cpu.inputs.reset ? "true" : "false") + ' |___| ' +
+            'out.memoryAddress = ' + dumpHex(cpu.outputs.memoryAddress) + ' | ' +
+            'out.memoryWrite = ' + dumpHex(cpu.outputs.memoryWrite) + ' | ' +
+            'out.memoryWE = ' + (cpu.outputs.memoryWE ? "true" : "false") + ' |___| ' +
+            'regPC = ' + dumpHex(cpu.registers.regPC) + ' | ' +
+            'regMem = ' + dumpHex(cpu.registers.regMemory) + ' | ' + 
+            'regSeq = ' + dumpHex(cpu.registers.regSeq) + ' | ' + 
+            'regInstr = ' + dumpHex(cpu.registers.regInstr) + ' | ' +
+            'regReset = ' + (cpu.registers.regReset ? "true" : "false")
+        );
+    }
+
+    staticRam.log(0, 6);
+
+    function dumpHex(data)
+    {
+        return ((data & 0xFF000000) >>> (6 * 4)).toString(16) + ' ' +
+        ((data & 0x00FF0000) >>> (4 * 4)).toString(16) + ' ' +
+        ((data & 0x0000FF00) >>> (2 * 4)).toString(16) + ' ' +
+        (data & 0x000000FF).toString(16);
+    }
 
 })();
 
